# dbus_type_correction

./: .gitignore  CMakeLists.txt  README.md  dbusprediction.cpp  explore dict.ipynb  groups  project.config
dbus/: .dbusfrompython.py.swp  CMakeLists.txt  dbus_server.cpp  dbus_server.h  dbus_server_glue.h  dbus_server_introspect.xml  dbusfrompython.py
notebooks/: Example Usage.ipynb
prediction/: CMakeLists.cmake  context_info.h  dictionary_service.cc  dictionary_service.h  input_info.cc  input_info.h  key_set.h  prediction_apptests.cc  prediction_service_impl.cc  prediction_service_impl.h  proximity_info_factory.cc  proximity_info_factory.h  touch_position_correction.cc  touch_position_correction.h
python/: CMakeLists.txt  bindings.cpp  suggestr.py  test.py
