cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
add_definitions(-std=c++14 -O3)

add_definitions(-DHOST_TOOL -DFLAG_DO_PROFILE -DFLAG_DBG)

# activate -fPIC
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

include_directories(
	prediction/
	include/)

get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
foreach(dir ${dirs})
  message(STATUS "dir='${dir}'")
endforeach()

add_library(suggest
    include/third_party/android_prediction/defines.h
    include/third_party/android_prediction/suggest/core/dicnode/dic_node.cpp
    include/third_party/android_prediction/suggest/core/dicnode/dic_node.h
    include/third_party/android_prediction/suggest/core/dicnode/dic_node_pool.h
    include/third_party/android_prediction/suggest/core/dicnode/dic_node_priority_queue.h
    include/third_party/android_prediction/suggest/core/dicnode/dic_node_profiler.h
    include/third_party/android_prediction/suggest/core/dicnode/dic_node_utils.cpp
    include/third_party/android_prediction/suggest/core/dicnode/dic_node_utils.h
    include/third_party/android_prediction/suggest/core/dicnode/dic_node_vector.h
    include/third_party/android_prediction/suggest/core/dicnode/dic_nodes_cache.cpp
    include/third_party/android_prediction/suggest/core/dicnode/dic_nodes_cache.h
    include/third_party/android_prediction/suggest/core/dicnode/internal/dic_node_properties.h
    include/third_party/android_prediction/suggest/core/dicnode/internal/dic_node_state.h
    include/third_party/android_prediction/suggest/core/dicnode/internal/dic_node_state_input.h
    include/third_party/android_prediction/suggest/core/dicnode/internal/dic_node_state_output.h
    include/third_party/android_prediction/suggest/core/dicnode/internal/dic_node_state_scoring.h
    include/third_party/android_prediction/suggest/core/dictionary/binary_dictionary_bigrams_iterator.h
    include/third_party/android_prediction/suggest/core/dictionary/binary_dictionary_shortcut_iterator.h
    include/third_party/android_prediction/suggest/core/dictionary/bloom_filter.h
    include/third_party/android_prediction/suggest/core/dictionary/dictionary.cpp
    include/third_party/android_prediction/suggest/core/dictionary/dictionary.h
    include/third_party/android_prediction/suggest/core/dictionary/dictionary_utils.cpp
    include/third_party/android_prediction/suggest/core/dictionary/dictionary_utils.h
    include/third_party/android_prediction/suggest/core/dictionary/digraph_utils.cpp
    include/third_party/android_prediction/suggest/core/dictionary/digraph_utils.h
    include/third_party/android_prediction/suggest/core/dictionary/error_type_utils.cpp
    include/third_party/android_prediction/suggest/core/dictionary/error_type_utils.h
    include/third_party/android_prediction/suggest/core/dictionary/multi_bigram_map.cpp
    include/third_party/android_prediction/suggest/core/dictionary/multi_bigram_map.h
    include/third_party/android_prediction/suggest/core/dictionary/ngram_listener.h
    include/third_party/android_prediction/suggest/core/dictionary/property/bigram_property.h
    include/third_party/android_prediction/suggest/core/dictionary/property/unigram_property.h
    include/third_party/android_prediction/suggest/core/dictionary/property/word_property.h
    include/third_party/android_prediction/suggest/core/layout/additional_proximity_chars.cpp
    include/third_party/android_prediction/suggest/core/layout/additional_proximity_chars.h
    include/third_party/android_prediction/suggest/core/layout/geometry_utils.h
    include/third_party/android_prediction/suggest/core/layout/normal_distribution.h
    include/third_party/android_prediction/suggest/core/layout/normal_distribution_2d.h
    include/third_party/android_prediction/suggest/core/layout/proximity_info.cpp
    include/third_party/android_prediction/suggest/core/layout/proximity_info.h
    include/third_party/android_prediction/suggest/core/layout/proximity_info_params.cpp
    include/third_party/android_prediction/suggest/core/layout/proximity_info_params.h
    include/third_party/android_prediction/suggest/core/layout/proximity_info_state.cpp
    include/third_party/android_prediction/suggest/core/layout/proximity_info_state.h
    include/third_party/android_prediction/suggest/core/layout/proximity_info_state_utils.cpp
    include/third_party/android_prediction/suggest/core/layout/proximity_info_state_utils.h
    include/third_party/android_prediction/suggest/core/layout/proximity_info_utils.h
    include/third_party/android_prediction/suggest/core/layout/touch_position_correction_utils.h
    include/third_party/android_prediction/suggest/core/policy/dictionary_bigrams_structure_policy.h
    include/third_party/android_prediction/suggest/core/policy/dictionary_header_structure_policy.h
    include/third_party/android_prediction/suggest/core/policy/dictionary_shortcuts_structure_policy.h
    include/third_party/android_prediction/suggest/core/policy/dictionary_structure_with_buffer_policy.h
    include/third_party/android_prediction/suggest/core/policy/scoring.h
    include/third_party/android_prediction/suggest/core/policy/suggest_policy.h
    include/third_party/android_prediction/suggest/core/policy/traversal.h
    include/third_party/android_prediction/suggest/core/policy/weighting.cpp
    include/third_party/android_prediction/suggest/core/policy/weighting.h
    include/third_party/android_prediction/suggest/core/result/suggested_word.h
    include/third_party/android_prediction/suggest/core/result/suggestion_results.cpp
    include/third_party/android_prediction/suggest/core/result/suggestion_results.h
    include/third_party/android_prediction/suggest/core/result/suggestions_output_utils.cpp
    include/third_party/android_prediction/suggest/core/result/suggestions_output_utils.h
    include/third_party/android_prediction/suggest/core/session/dic_traverse_session.cpp
    include/third_party/android_prediction/suggest/core/session/dic_traverse_session.h
    include/third_party/android_prediction/suggest/core/session/prev_words_info.h
    include/third_party/android_prediction/suggest/core/suggest.cpp
    include/third_party/android_prediction/suggest/core/suggest.h
    include/third_party/android_prediction/suggest/core/suggest_interface.h
    include/third_party/android_prediction/suggest/core/suggest_options.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/header/header_policy.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/header/header_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/header/header_read_write_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/header/header_read_write_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/bigram/ver4_bigram_list_policy.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/bigram/ver4_bigram_list_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/bigram_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/bigram_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/bigram_entry.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/probability_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/probability_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/probability_entry.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/shortcut_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/shortcut_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/single_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/sparse_table_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/sparse_table_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/terminal_position_lookup_table.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/content/terminal_position_lookup_table.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/shortcut/ver4_shortcut_list_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_dict_buffers.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_dict_buffers.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_dict_constants.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_dict_constants.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_node_reader.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_node_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_node_writer.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_node_writer.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_policy.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_reading_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_reading_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_writing_helper.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_patricia_trie_writing_helper.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_pt_node_array_reader.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/backward/v402/ver4_pt_node_array_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/dictionary_structure_with_buffer_policy_factory.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/dictionary_structure_with_buffer_policy_factory.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/bigram/bigram_list_read_write_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/bigram/bigram_list_read_write_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_gc_event_listeners.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_gc_event_listeners.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_reading_helper.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_reading_helper.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_reading_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_reading_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_updating_helper.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_updating_helper.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_writing_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/dynamic_pt_writing_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/patricia_trie_reading_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/patricia_trie_reading_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/pt_node_array_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/pt_node_params.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/pt_node_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/pt_node_writer.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/shortcut/shortcut_list_reading_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/pt_common/shortcut/shortcut_list_reading_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/bigram/bigram_list_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/patricia_trie_policy.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/patricia_trie_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/shortcut/shortcut_list_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/ver2_patricia_trie_node_reader.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/ver2_patricia_trie_node_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/ver2_pt_node_array_reader.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v2/ver2_pt_node_array_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/bigram/ver4_bigram_list_policy.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/bigram/ver4_bigram_list_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/bigram_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/bigram_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/bigram_entry.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/language_model_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/language_model_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/probability_entry.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/shortcut_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/shortcut_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/single_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/sparse_table_dict_content.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/sparse_table_dict_content.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/terminal_position_lookup_table.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/content/terminal_position_lookup_table.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/shortcut/ver4_shortcut_list_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_dict_buffers.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_dict_buffers.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_dict_constants.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_dict_constants.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_node_reader.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_node_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_node_writer.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_node_writer.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_policy.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_policy.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_reading_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_reading_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_writing_helper.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_patricia_trie_writing_helper.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_pt_node_array_reader.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/structure/v4/ver4_pt_node_array_reader.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/buffer_with_extendable_buffer.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/buffer_with_extendable_buffer.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/byte_array_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/byte_array_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/dict_file_writing_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/dict_file_writing_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/file_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/file_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/forgetting_curve_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/forgetting_curve_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/format_utils.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/format_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/historical_info.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/mmapped_buffer.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/mmapped_buffer.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/probability_utils.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/sparse_table.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/sparse_table.h
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/trie_map.cpp
    include/third_party/android_prediction/suggest/policyimpl/dictionary/utils/trie_map.h
    include/third_party/android_prediction/suggest/policyimpl/gesture/gesture_suggest_policy_factory.cpp
    include/third_party/android_prediction/suggest/policyimpl/gesture/gesture_suggest_policy_factory.h
    include/third_party/android_prediction/suggest/policyimpl/typing/scoring_params.cpp
    include/third_party/android_prediction/suggest/policyimpl/typing/scoring_params.h
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_scoring.cpp
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_scoring.h
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_suggest_policy.cpp
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_suggest_policy.h
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_suggest_policy_factory.h
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_traversal.cpp
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_traversal.h
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_weighting.cpp
    include/third_party/android_prediction/suggest/policyimpl/typing/typing_weighting.h
    include/third_party/android_prediction/suggest/policyimpl/utils/damerau_levenshtein_edit_distance_policy.h
    include/third_party/android_prediction/suggest/policyimpl/utils/edit_distance.h
    include/third_party/android_prediction/suggest/policyimpl/utils/edit_distance_policy.h
    include/third_party/android_prediction/utils/autocorrection_threshold_utils.cpp
    include/third_party/android_prediction/utils/autocorrection_threshold_utils.h
    include/third_party/android_prediction/utils/byte_array_view.h
    include/third_party/android_prediction/utils/char_utils.cpp
    include/third_party/android_prediction/utils/char_utils.h
    include/third_party/android_prediction/utils/int_array_view.h
    include/third_party/android_prediction/utils/time_keeper.cpp
    include/third_party/android_prediction/utils/time_keeper.h
)

add_library(prediction_lib 
    prediction/dictionary_service.cc
    prediction/dictionary_service.h
    prediction/input_info.cc
    prediction/input_info.h
    prediction/key_set.h
    prediction/proximity_info_factory.cc
    prediction/proximity_info_factory.h
    prediction/touch_position_correction.cc
    prediction/touch_position_correction.h
)

target_link_libraries(prediction_lib suggest)

add_subdirectory(dbus)
add_subdirectory(python)